--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -21,7 +21,7 @@
 .def submarine mermaid_jade|airship
 .def victory victory
 
-#starting_character  *
+starting_character  *
 starting_item       *
 skill_cave          *
 sundletan_cave      *
@@ -63,4 +63,4 @@ shuman              airship&all_tools_or_keys&party3
 stradha             airship&all_tools_or_keys&party3
 kamirno             airship&all_tools&all_keys&party3
 daos_shrine         lisa&marie&clare&all_tools&all_keys&useless_keys&party4
-#ancient_cave        *
+#ancient_cave        party3
