--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -56,7 +56,7 @@ vengeance_shrine1   submarine&bomb&hammer&ghost_key&party3
 vengeance_shrine2   submarine&bomb&hammer&ghost_key&party3
 truth_tower1        bomb&hook&truth_key&party3
 truth_tower2        bomb&hook&truth_key&party3
-dragon_mountain     hook&hammer&fire_arrow&magma_key&party3
+dragon_mountain     submarine&hook&hammer&fire_arrow&magma_key&party3
 underwater_shrine   submarine&mermaid_jade&party3
 gratze_basement     submarine&breakable&hook&basement_key&party3
 shuman              airship&all_tools_or_keys&party3
