--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -15,18 +15,19 @@
 .def party3b all_boys&some_girls
 .def party3 party3a|party3b
 .def party4 all_boys&all_girls
-#.def submarine engine1
-#.def airship engine1&engine2
 .def airship engine
 .def submarine mermaid_jade|airship
 .def victory victory
+
+.def dankirk hook&bomb&dankirk_key
+.def gratze dankirk|submarine
 
 starting_character  *
 starting_item       *
 skill_cave          *
 sundletan_cave      *
 catfish_cave        lake_key
-alunze_cave         breakable
+alunze_cave         *
 alunze_basement     breakable
 tanbel_tower1       bomb&hook&sky_key&party1
 tanbel_tower2       bomb&hook&sky_key&party1
@@ -46,7 +47,7 @@ sacrifice_tower2    hook&bomb&narcysus_key&party3
 karlloon_shrine1    hook&bomb&party3
 karlloon_shrine2    hook&bomb&party3
 flower_mountain     hammer&flower_key&party3
-dankirk_dungeon     hook&breakable&dankirk_key&party3
+dankirk_dungeon     dankirk&party3
 northeast_tower1    hook&hammer&trial_key&party3
 northeast_tower2    hook&hammer&trial_key&party3
 no_return_mountain  party3
@@ -58,7 +59,7 @@ truth_tower1        bomb&hook&truth_key&party3
 truth_tower2        bomb&hook&truth_key&party3
 dragon_mountain     submarine&hook&hammer&fire_arrow&magma_key&party3
 underwater_shrine   submarine&mermaid_jade&party3
-gratze_basement     submarine&breakable&hook&basement_key&party3
+gratze_basement     gratze&breakable&hook&basement_key&party3
 shuman              airship&all_tools_or_keys&party3
 stradha             airship&all_tools_or_keys&party3
 kamirno             airship&all_tools&all_keys&party3
