--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -7,14 +7,18 @@
 .def some_boys maxim|guy|dekar|lexis|arty
 .def all_girls tia&selan
 .def some_girls tia|selan
-.def party1 some_boys|some_girls
-.def party2a some_boys&some_girls
+.def all_capsules jelze&flash&gusto&zeppy&darbi&sully&blaze
+.def some_capsules jelze|flash|gusto|zeppy|darbi|sully|blaze
+.def party0 some_boys|some_girls
+.def party1 party0&some_capsules
+.def party2a party1&some_boys&some_girls
 .def party2b all_boys|all_girls
 .def party2 party2a|party2b
-.def party3a some_boys&all_girls
-.def party3b all_boys&some_girls
+.def party3a some_boys&all_girls&some_capsules
+.def party3b all_boys&some_girls&some_capsules
 .def party3 party3a|party3b
-.def party4 all_boys&all_girls
+.def party4 all_boys&all_girls&some_capsules
+.def party5 party4&all_capsules
 .def airship engine
 .def submarine mermaid_jade|airship
 .def victory victory
@@ -24,29 +28,36 @@
 
 starting_character  *
 starting_item       *
-skill_cave          *
-sundletan_cave      *
+skill_cave          party0
+foomy_woods         party0
+darbi_shrine        party0
+zeppy_cave          submarine
+sundletan_cave      party0
 catfish_cave        lake_key
-alunze_cave         *
+alunze_cave         party0
 alunze_basement     breakable
 tanbel_tower1       bomb&hook&sky_key&party1
 tanbel_tower2       bomb&hook&sky_key&party1
 ruby_cave           ruby_key&party1
+ruby_capsule        breakable
 tsword_shrine1      bomb&sword_key&party2
 tsword_shrine2      bomb&sword_key&party2
 gordovan_tower1     hook&bomb&wind_key&party2
 gordovan_tower2     hook&bomb&wind_key&party2
 cave_bridge         breakable&hook&party1
 north_dungeon       hook&bomb&party2
+north_capsule       hook&bomb&party2
 ancient_tower1      hook&bomb&cloud_key&party2
 ancient_tower2      hook&bomb&cloud_key&party2
 lighthouse          breakable&light_key&party2
 phantom_mountain    hook&bomb&fire_arrow&tree_key&party3
 sacrifice_tower1    hook&bomb&narcysus_key&party3
 sacrifice_tower2    hook&bomb&narcysus_key&party3
+sacrifice_capsule   hook&bomb&narcysus_key
 karlloon_shrine1    hook&bomb&party3
 karlloon_shrine2    hook&bomb&party3
 flower_mountain     hammer&flower_key&party3
+flower_capsule      hammer&flower_key&hook&party3
 dankirk_dungeon     dankirk&party3
 northeast_tower1    hook&hammer&trial_key&party3
 northeast_tower2    hook&hammer&trial_key&party3
@@ -60,8 +71,8 @@ truth_tower2        bomb&hook&truth_key&party3
 dragon_mountain     submarine&hook&hammer&fire_arrow&magma_key&party3
 underwater_shrine   submarine&mermaid_jade&party3
 gratze_basement     gratze&breakable&hook&basement_key&party3
-shuman              airship&all_tools_or_keys&party3
-stradha             airship&all_tools_or_keys&party3
-kamirno             airship&all_tools&all_keys&party3
-daos_shrine         lisa&marie&clare&all_tools&all_keys&useless_keys&party4
+shuman              airship&all_tools_or_keys&party4
+stradha             airship&all_tools_or_keys&party4
+kamirno             airship&all_tools&all_keys&party4
+daos_shrine         lisa&marie&clare&all_tools&all_keys&party5
 #ancient_cave        party3
