--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -3,8 +3,8 @@
 .def all_keys sky_key&lake_key&ruby_key&wind_key&cloud_key&light_key&sword_key&tree_key&flower_key&magma_key&heart_key&ghost_key&trial_key&dankirk_key&basement_key&narcysus_key&truth_key&mermaid_jade
 .def all_tools bomb&hook&hammer&fire_arrow
 .def all_tools_or_keys all_tools|all_keys
-.def all_boys maxim&guy&dekar&lexis&arty
-.def some_boys maxim|guy|dekar|lexis|arty
+.def all_boys maxim&guy&dekar&lexis&artea
+.def some_boys maxim|guy|dekar|lexis|artea
 .def all_girls tia&selan
 .def some_girls tia|selan
 .def all_capsules jelze&flash&gusto&zeppy&darbi&sully&blaze
