--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -1,5 +1,5 @@
 .def breakable bomb|hammer
-.def useless_keys door_key&shrine_key&ancient_key
+.def useless_keys door_key&shrine_key
 .def all_keys sky_key&lake_key&ruby_key&wind_key&cloud_key&light_key&sword_key&tree_key&flower_key&magma_key&heart_key&ghost_key&trial_key&dankirk_key&basement_key&narcysus_key&truth_key&mermaid_jade
 .def all_tools bomb&hook&hammer&fire_arrow
 .def all_tools_or_keys all_tools|all_keys
