--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -72,7 +72,7 @@ truth_tower2        bomb&hook&truth_key&party3
 dragon_mountain     submarine&hook&hammer&fire_arrow&magma_key&party3
 underwater_shrine   submarine&mermaid_jade&party3
 gratze_basement     gratze&breakable&hook&basement_key&party3
-shuman              airship&all_tools_or_keys&party4
-stradha             airship&all_tools_or_keys&party4
-kamirno             airship&all_tools&all_keys&party4
-daos_shrine         lisa&marie&clare&all_tools&all_keys&party5
+shuman              airship&party3
+stradha             airship&party3
+kamirno             airship&party3
+daos_shrine         lisa&marie&clare&airship&all_tools&all_keys&party5
