--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -20,7 +20,7 @@
 .def party4 all_boys&all_girls&some_capsules
 .def party5 party4&all_capsules
 .def airship engine
-.def submarine mermaid_jade|airship
+.def submarine mermaid_jade
 .def victory victory
 
 .def dankirk hook&bomb&dankirk_key
@@ -70,7 +70,7 @@ vengeance_shrine2   submarine&bomb&hammer&ghost_key&party3
 truth_tower1        bomb&hook&truth_key&party3
 truth_tower2        bomb&hook&truth_key&party3
 dragon_mountain     submarine&hook&hammer&fire_arrow&magma_key&party3
-underwater_shrine   submarine&mermaid_jade&party3
+underwater_shrine   submarine&party3
 gratze_basement     gratze&breakable&hook&basement_key&party3
 shuman              airship&party3
 stradha             airship&party3
