split requirements for capsule monster locations to be consistent about half checks

--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -64,9 +64,9 @@ tsword_shrine1      bomb&sword_key&party2
 tsword_shrine2      bomb&sword_key&party2
 gordovan_tower1     hook&bomb&wind_key&party2
 gordovan_tower2     hook&bomb&wind_key&party2
-cave_bridge         breakable&hook&party1
+cave_bridge         breakable&hook&party0
 north_dungeon       hook&bomb&party2
-north_capsule       hook&bomb&party2
+north_capsule       hook&party2
 ancient_tower1      hook&bomb&cloud_key&party2
 ancient_tower2      hook&bomb&cloud_key&party2
 lighthouse1         breakable&light_key&party2
@@ -74,16 +74,16 @@ lighthouse2         breakable&light_key&party2
 phantom_mountain    hook&bomb&fire_arrow&tree_key&party2
 sacrifice_tower1    hook&bomb&narcysus_key&party2
 sacrifice_tower2    hook&bomb&narcysus_key&party2
-sacrifice_capsule   hook&bomb&narcysus_key&party2
+sacrifice_capsule   hook&breakable&narcysus_key&party2
 karlloon_shrine1    hook&bomb&party2
 karlloon_shrine2    hook&bomb&party2
 lexis_lab           party0
 flower_mountain     hammer&flower_key&party2
-flower_capsule      hammer&flower_key&hook&party2
+flower_capsule      hammer&hook&party2
 dankirk_dungeon     dankirk
 northeast_tower1    hook&hammer&trial_key&party2
 northeast_tower2    hook&hammer&trial_key&party2
-no_return_mountain  party1
+no_return_mountain  party0
 divine_shrine1      hook&hammer&heart_key&party2
 divine_shrine2      hook&hammer&heart_key&party2
 vengeance_shrine1   submarine&bomb&hammer&ghost_key&party2
