--- a/tables/requirements.txt
+++ b/tables/requirements.txt
@@ -8,38 +8,20 @@
 .def all_capsules jelze&flash&gusto&zeppy&darbi&sully&blaze
 .def some_capsules jelze|flash|gusto|zeppy|darbi|sully|blaze
 
-.def group1_some selan|tia
-.def group1_all selan&tia
-.def group2_some guy|dekar
-.def group2_all guy&dekar
-.def group3_some maxim|artea|lexis
-.def group3_all maxim&artea&lexis
-
 .def any_tool arrow|bomb|hook|hammer|fire_arrow
 .def any_character maxim|selan|guy|artea|tia|dekar|lexis
 .def party0 any_tool&any_character
 
-.def party1a group1_all|group2_all
-.def party1b group1_some&group2_some
-.def party1c group1_some&group3_some
-.def party1d group2_some&group3_some
-.def party1 party1a|party1b|party1c|party1d
+.def party1 character1|character2|character3
 
-.def party2a group1_some&group2_some&group3_some
-.def party2b group1_all&group2_some
-.def party2c group1_some&group2_all
-.def party2d group1_all&group3_some
-.def party2e group2_all&group3_some
-.def party2f group3_all
-.def party2 party2a|party2b|party2c|party2d|party2e|party2f
+.def party2a character1&character2
+.def party2b character1&character3
+.def party2c character2&character3
+.def party2 party2a|party2b|party2c
 
-.def party3a party1a&party2a
-.def party3b group3_all
-.def party3c group1_all&group2_all
-.def party3 party3a|party3b|party3c
+.def party3 character1&character2&character3
 
-.def party4 group1_all&group2_all&group3_all
-.def party5 party4&all_capsules
+.def party4 party3&all_capsules
 
 .def airship engine
 .def submarine mermaid_jade
@@ -100,4 +82,4 @@ gratze_basement     gratze&arrowlike&basement_key&party2
 shuman              airship&party3
 stradha             airship&party3
 kamirno             airship&party3
-daos_shrine         lisa&marie&clare&airship&submarine&all_tools&all_keys&party5
+daos_shrine         lisa&marie&clare&airship&submarine&all_tools&all_keys&party4
