--- a/tables/requirements_fourkeys.txt
+++ b/tables/requirements_fourkeys.txt
@@ -1,6 +1,25 @@
 .def breakable bomb|hammer
 .def useless_keys door_key&shrine_key
-.def all_keys sky_key&lake_key&ruby_key&wind_key&cloud_key&light_key&sword_key&tree_key&flower_key&magma_key&heart_key&ghost_key&trial_key&dankirk_key&basement_key&narcysus_key&truth_key
+
+.def all_keys dungeons_key&mountains_key&shrines_key&towers_key
+.def sky_key towers_key
+.def lake_key dungeons_key
+.def ruby_key dungeons_key
+.def wind_key towers_key
+.def cloud_key towers_key
+.def light_key towers_key
+.def sword_key shrines_key
+.def tree_key mountains_key
+.def flower_key mountains_key
+.def magma_key mountains_key
+.def heart_key shrines_key
+.def ghost_key shrines_key
+.def trial_key towers_key
+.def dankirk_key dungeons_key
+.def basement_key dungeons_key
+.def narcysus_key towers_key
+.def truth_key towers_key
+
 .def all_tools arrow&bomb&hook&hammer&fire_arrow
 .def all_tools_or_keys all_tools|all_keys
 .def arrowlike arrow|hook|fire_arrow
@@ -41,40 +60,29 @@ sundletan_cave      party0
 catfish_cave        arrowlike&lake_key&party0
 alunze_cave         breakable&party0
 alunze_basement     breakable&party0
-tanbel_tower1       sky_key&party1
-tanbel_tower2       sky_key&party1
+tanbel_tower        sky_key&party1
 ruby_cave           ruby_key&party1
 ruby_capsule        breakable&party0
-tsword_shrine1      bomb&sword_key&party2
-tsword_shrine2      bomb&sword_key&party2
-gordovan_tower1     hook&bomb&wind_key&party2
-gordovan_tower2     hook&bomb&wind_key&party2
+tsword_shrine       bomb&sword_key&party2
+gordovan_tower      hook&bomb&wind_key&party2
 cave_bridge         breakable&hook&party0
 north_dungeon       hook&bomb&party2
 north_capsule       hook&party2
-ancient_tower1      hook&bomb&cloud_key&party2
-ancient_tower2      hook&bomb&cloud_key&party2
-lighthouse1         light_key&party2
-lighthouse2         light_key&party2
+ancient_tower       hook&bomb&cloud_key&party2
+lighthouse          light_key&party2
 phantom_mountain    hook&bomb&fire_arrow&tree_key&party2
-sacrifice_tower1    hook&bomb&narcysus_key&party2
-sacrifice_tower2    hook&bomb&narcysus_key&party2
+sacrifice_tower     hook&bomb&narcysus_key&party2
 sacrifice_capsule   hook&breakable&narcysus_key&party2
-karlloon_shrine1    hook&bomb&party2
-karlloon_shrine2    hook&bomb&party2
+karlloon_shrine     hook&bomb&party2
 lexis_lab           party0
 flower_mountain     hammer&flower_key&party2
 flower_capsule      hammer&hook&party2
 dankirk_dungeon     dankirk
-northeast_tower1    hook&hammer&trial_key&party2
-northeast_tower2    hook&hammer&trial_key&party2
+northeast_tower     hook&hammer&trial_key&party2
 no_return_mountain  party0
-divine_shrine1      hook&hammer&heart_key&party2
-divine_shrine2      hook&hammer&heart_key&party2
-vengeance_shrine1   submarine&bomb&hammer&ghost_key&party2
-vengeance_shrine2   submarine&bomb&hammer&ghost_key&party2
-truth_tower1        breakable&hook&truth_key&party2
-truth_tower2        breakable&hook&truth_key&party2
+divine_shrine       hook&hammer&heart_key&party2
+vengeance_shrine    submarine&bomb&hammer&ghost_key&party2
+truth_tower         breakable&hook&truth_key&party2
 dragon_mountain     submarine_or_airship&hook&hammer&fire_arrow&magma_key&party2
 underwater_shrine   submarine&party0
 gratze_basement     gratze&arrowlike&basement_key&party2
