--- a/.github/workflows/python-packaging.yml
+++ b/.github/workflows/python-packaging.yml
@@ -3,8 +3,8 @@ name: Python Packaging
 on: [push]
 
 jobs:
-  build-windows:
-    runs-on: windows
+  build-linux:
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
 
